deploy: 5036858806a40823bb67fa12fe21fda9aee2fcbd

--- a/post1/index.html
+++ b/post1/index.html
@@ -9,19 +9,19 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Titre"/>
-<meta name="twitter:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing"/>
+<meta name="twitter:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo"/>
 
 <meta property="og:title" content="Titre" />
-<meta property="og:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing" />
+<meta property="og:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/post1/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Titre">
-<meta itemprop="description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing">
+<meta itemprop="description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo">
 
-<meta itemprop="wordCount" content="24">
+<meta itemprop="wordCount" content="25">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../post1/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -43,7 +43,7 @@
     "name": "Titre",
     "headline": "Titre",
     "alternativeHeadline": "",
-    "description": "La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing",
+    "description": "La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/post1\/",
-    "wordCount" : "24",
+    "wordCount" : "25",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -136,7 +136,7 @@
       <div class="post-content e-content" itemprop="articleBody">
         
       <blockquote>
-<p>La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing</p>
+<p>La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo</p>
 </blockquote>
 
       </div>
