--- a/print/index.html
+++ b/print/index.html
@@ -98,7 +98,7 @@
     <h3>Titre</h3>
     <div class="contenu">
         <blockquote>
-<p>La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing</p>
+<p>La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo</p>
 </blockquote>
 
     </div>
