deploy: 16757e784d9e3215ef6ab6acafb7408a207aea03

--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -9,22 +9,31 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Bratkartoffeln"/>
-<meta name="twitter:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps : 40 minutes Portions : 4 portions Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes."/>
+<meta name="twitter:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
+Portions 4 portions
+Les ingrédients :
+1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
+Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
 
 <meta property="og:title" content="Bratkartoffeln" />
-<meta property="og:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps : 40 minutes Portions : 4 portions Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes." />
+<meta property="og:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
+Portions 4 portions
+Les ingrédients :
+1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
+Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/bratkartoffeln/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Bratkartoffeln">
-<meta itemprop="description" content="Bratkartoffeln ou les pommes de terre sautées # Temps : 40 minutes Portions : 4 portions Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.">
+<meta itemprop="description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
+Portions 4 portions
+Les ingrédients :
+1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
+Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
 
-<meta itemprop="wordCount" content="205">
+<meta itemprop="wordCount" content="185">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../bratkartoffeln/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -46,7 +55,7 @@
     "name": "Bratkartoffeln",
     "headline": "Bratkartoffeln",
     "alternativeHeadline": "",
-    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps : 40 minutes Portions : 4 portions Les ingrédients :\n1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.",
+    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients :\n1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :\nPeler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -83,7 +92,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/bratkartoffeln\/",
-    "wordCount" : "205",
+    "wordCount" : "185",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -138,27 +147,29 @@
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées">Bratkartoffeln ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p>Temps : 40 minutes
-Portions : 4 portions
-Les ingrédients :</p>
+      <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
+<p><strong>Temps</strong>       40 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
+<p><strong>Les ingrédients  :</strong></p>
 <ul>
 <li>1.75 kg de pommes de terre</li>
 <li>1 oignon moyen</li>
 <li>250 g de lardons fumés</li>
 <li>5 c. à soupe de beurre clarifié</li>
 <li>1 c. à soupe de gros sel</li>
-<li>Sel et poivre au goût
-La préparation :</li>
-<li>Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
-<li>Étape 2 : Coupez les pommes de terre en tranches fines.</li>
-<li>Étape 3 : Dans une poêle avec du beurre clarifié, faites d’abord frire les lardons, puis ajoutez les oignons après quelques minutes.</li>
-<li>Étape 4 : Dans une deuxième poêle, faire frire les tranches de pommes de terre avec du beurre clarifié.</li>
-<li>Étape 5 : Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
-<li>Étape 6 : Finalement, tout est mélangé et frit pendant quelques minutes de plus.
-Mon conseil :
-Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</li>
+<li>Sel et poivre au goût</li>
 </ul>
+<p><strong>La préparation  :</strong></p>
+<ol>
+<li>Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
+<li>Coupez les pommes de terre en tranches fines.</li>
+<li>Dans une poêle avec du beurre clarifié, faites d’abord frire les lardons, puis ajoutez les oignons après quelques minutes.</li>
+<li>Dans une deuxième poêle, faire frire les tranches de pommes de terre avec du beurre clarifié.</li>
+<li>Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
+<li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
+</ol>
+<p><strong>Mon conseil  :</strong>
+Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
 
       </div>
        
