--- a/print/index.html
+++ b/print/index.html
@@ -137,27 +137,29 @@
     <h2 class="titre-chapitre" id="Bratkartoffeln"></h2>
     <h3>Bratkartoffeln</h3>
     <div class="contenu">
-        <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées">Bratkartoffeln ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p>Temps : 40 minutes
-Portions : 4 portions
-Les ingrédients :</p>
+        <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
+<p><strong>Temps</strong>       40 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
+<p><strong>Les ingrédients  :</strong></p>
 <ul>
 <li>1.75 kg de pommes de terre</li>
 <li>1 oignon moyen</li>
 <li>250 g de lardons fumés</li>
 <li>5 c. à soupe de beurre clarifié</li>
 <li>1 c. à soupe de gros sel</li>
-<li>Sel et poivre au goût
-La préparation :</li>
-<li>Étape 1 : Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
-<li>Étape 2 : Coupez les pommes de terre en tranches fines.</li>
-<li>Étape 3 : Dans une poêle avec du beurre clarifié, faites d’abord frire les lardons, puis ajoutez les oignons après quelques minutes.</li>
-<li>Étape 4 : Dans une deuxième poêle, faire frire les tranches de pommes de terre avec du beurre clarifié.</li>
-<li>Étape 5 : Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
-<li>Étape 6 : Finalement, tout est mélangé et frit pendant quelques minutes de plus.
-Mon conseil :
-Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</li>
+<li>Sel et poivre au goût</li>
 </ul>
+<p><strong>La préparation  :</strong></p>
+<ol>
+<li>Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
+<li>Coupez les pommes de terre en tranches fines.</li>
+<li>Dans une poêle avec du beurre clarifié, faites d’abord frire les lardons, puis ajoutez les oignons après quelques minutes.</li>
+<li>Dans une deuxième poêle, faire frire les tranches de pommes de terre avec du beurre clarifié.</li>
+<li>Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
+<li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
+</ol>
+<p><strong>Mon conseil  :</strong>
+Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
 
     </div>
     </section>
