--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -11,16 +11,12 @@
 <meta name="twitter:title" content="Bratkartoffeln"/>
 <meta name="twitter:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
-Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
+Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
 
 <meta property="og:title" content="Bratkartoffeln" />
 <meta property="og:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
-Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
+Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/bratkartoffeln/" /><meta property="article:section" content="posts" />
 
@@ -29,11 +25,9 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
 <meta itemprop="name" content="Bratkartoffeln">
 <meta itemprop="description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients :
-1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :
-Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
+Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
 
-<meta itemprop="wordCount" content="185">
+<meta itemprop="wordCount" content="188">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../bratkartoffeln/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -55,7 +49,7 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
     "name": "Bratkartoffeln",
     "headline": "Bratkartoffeln",
     "alternativeHeadline": "",
-    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients :\n1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation :\nPeler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
+    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -92,7 +86,7 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
     },
     "image": "/images/logo.jpg",
     "url" : "\/bratkartoffeln\/",
-    "wordCount" : "185",
+    "wordCount" : "188",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -148,9 +142,11 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
+<p><img src="../media/Kartoffelpuffer.jpg" alt="Les pommes de terre sautées avec Kartoffelpuffer" loading="lazy" />
+</p>
 <p><strong>Temps</strong>       40 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
-<p><strong>Les ingrédients  :</strong></p>
+<h3 id="les-ingrédients--"><strong>Les ingrédients  :</strong> <a href="#les-ingr%c3%a9dients--" class="hash">#</a></h3>
 <ul>
 <li>1.75 kg de pommes de terre</li>
 <li>1 oignon moyen</li>
@@ -159,7 +155,7 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
 <li>1 c. à soupe de gros sel</li>
 <li>Sel et poivre au goût</li>
 </ul>
-<p><strong>La préparation  :</strong></p>
+<h3 id="la-préparation--"><strong>La préparation  :</strong> <a href="#la-pr%c3%a9paration--" class="hash">#</a></h3>
 <ol>
 <li>Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
 <li>Coupez les pommes de terre en tranches fines.</li>
@@ -168,8 +164,8 @@ Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Co
 <li>Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
 <li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
 </ol>
-<p><strong>Mon conseil  :</strong>
-Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
+<h3 id="mon-conseil--"><strong>Mon conseil  :</strong> <a href="#mon-conseil--" class="hash">#</a></h3>
+<p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
 
       </div>
        
