deploy: f8d76d0dfe0c102bd3452547162b15ee41753a3c

--- a/bratkartoffeln/index.html
+++ b/bratkartoffeln/index.html
@@ -11,12 +11,12 @@
 <meta name="twitter:title" content="Bratkartoffeln"/>
 <meta name="twitter:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines."/>
 
 <meta property="og:title" content="Bratkartoffeln" />
 <meta property="og:description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/bratkartoffeln/" /><meta property="article:section" content="posts" />
 
@@ -25,9 +25,9 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
 <meta itemprop="name" content="Bratkartoffeln">
 <meta itemprop="description" content="Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes
 Portions 4 portions
-Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
+Les ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.">
 
-<meta itemprop="wordCount" content="188">
+<meta itemprop="wordCount" content="185">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../bratkartoffeln/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -49,7 +49,7 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
     "name": "Bratkartoffeln",
     "headline": "Bratkartoffeln",
     "alternativeHeadline": "",
-    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation : # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
+    "description": "Bratkartoffeln ou les pommes de terre sautées # Temps 40 minutes\nPortions 4 portions\nLes ingrédients # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons fumés 5 c. à soupe de beurre clarifié 1 c. à soupe de gros sel Sel et poivre au goût La préparation # Peler les oignons et les pommes de terre. Couper les oignons en petits cubes. Coupez les pommes de terre en tranches fines.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -86,7 +86,7 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
     },
     "image": "/images/logo.jpg",
     "url" : "\/bratkartoffeln\/",
-    "wordCount" : "188",
+    "wordCount" : "185",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -142,11 +142,11 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelpuffer.jpg" alt="Les pommes de terre sautées avec Kartoffelpuffer" loading="lazy" />
+<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
-<h3 id="les-ingrédients--"><strong>Les ingrédients  :</strong> <a href="#les-ingr%c3%a9dients--" class="hash">#</a></h3>
+<h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1.75 kg de pommes de terre</li>
 <li>1 oignon moyen</li>
@@ -155,7 +155,7 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
 <li>1 c. à soupe de gros sel</li>
 <li>Sel et poivre au goût</li>
 </ul>
-<h3 id="la-préparation--"><strong>La préparation  :</strong> <a href="#la-pr%c3%a9paration--" class="hash">#</a></h3>
+<h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
 <ol>
 <li>Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
 <li>Coupez les pommes de terre en tranches fines.</li>
@@ -164,7 +164,7 @@ Les ingrédients : # 1.75 kg de pommes de terre 1 oignon moyen 250 g de lardons 
 <li>Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
 <li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
 </ol>
-<h3 id="mon-conseil--"><strong>Mon conseil  :</strong> <a href="#mon-conseil--" class="hash">#</a></h3>
+<h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
 
       </div>
