--- a/print/index.html
+++ b/print/index.html
@@ -138,11 +138,11 @@
     <h3>Bratkartoffeln</h3>
     <div class="contenu">
         <h2 id="bratkartoffeln-ou-les-pommes-de-terre-sautées"><em>Bratkartoffeln</em> ou les pommes de terre sautées <a href="#bratkartoffeln-ou-les-pommes-de-terre-saut%c3%a9es" class="hash">#</a></h2>
-<p><img src="../media/Kartoffelpuffer.jpg" alt="Les pommes de terre sautées avec Kartoffelpuffer" loading="lazy" />
+<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       40 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
-<h3 id="les-ingrédients--"><strong>Les ingrédients  :</strong> <a href="#les-ingr%c3%a9dients--" class="hash">#</a></h3>
+<h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1.75 kg de pommes de terre</li>
 <li>1 oignon moyen</li>
@@ -151,7 +151,7 @@
 <li>1 c. à soupe de gros sel</li>
 <li>Sel et poivre au goût</li>
 </ul>
-<h3 id="la-préparation--"><strong>La préparation  :</strong> <a href="#la-pr%c3%a9paration--" class="hash">#</a></h3>
+<h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
 <ol>
 <li>Peler les oignons et les pommes de terre. Couper les oignons en petits cubes.</li>
 <li>Coupez les pommes de terre en tranches fines.</li>
@@ -160,7 +160,7 @@
 <li>Lorsque les oignons et les lardons sont prêts, les deux sont ajoutés aux pommes de terre.</li>
 <li>Finalement, tout est mélangé et frit pendant quelques minutes de plus.</li>
 </ol>
-<h3 id="mon-conseil--"><strong>Mon conseil  :</strong> <a href="#mon-conseil--" class="hash">#</a></h3>
+<h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Bratkartoffeln sont un plat très populaire en Allemagne et elles sont souvent servies avec le Wiener Schnitzel typique. Cependant, ma façon préférée de les manger est avec un œuf au plat. La jaune d’œuf fond sur les Bratkartoffeln, ce qui crée une combinaison extrêmement savoureuse.</p>
 
     </div>
