--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -9,19 +9,22 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelpuffer"/>
-<meta name="twitter:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo"/>
+<meta name="twitter:description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble."/>
 
 <meta property="og:title" content="Kartoffelpuffer" />
-<meta property="og:description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo" />
+<meta property="og:description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelpuffer/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Kartoffelpuffer">
-<meta itemprop="description" content="La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo">
+<meta itemprop="description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble.">
 
-<meta itemprop="wordCount" content="25">
+<meta itemprop="wordCount" content="258">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../kartoffelpuffer/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -43,7 +46,7 @@
     "name": "Kartoffelpuffer",
     "headline": "Kartoffelpuffer",
     "alternativeHeadline": "",
-    "description": "La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo",
+    "description": "*Kartoffelpuffer\u0026quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions\nLes ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l\u0026rsquo;aide d\u0026rsquo;une passoire, puis mélanger ensemble.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -80,7 +83,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/kartoffelpuffer\/",
-    "wordCount" : "25",
+    "wordCount" : "258",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -135,9 +138,27 @@
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <blockquote>
-<p>La science ne nous dit pas où nous allons - c’est le rôle de l’art - ; elle nous dit où nous sommes. Turing hallo</p>
-</blockquote>
+      <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre">*Kartoffelpuffer&quot; ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
+<p><strong>Temps</strong>       35 minutes
+<strong>Portions</strong>    4 portions</p>
+<h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
+<ul>
+<li>12 pommes de terre pelées et râpées, non cuites</li>
+<li>2 oignons râpés</li>
+<li>2 œufs</li>
+<li>2 c. à soupe de farine</li>
+<li>Plusieurs c. à soupe d’huile</li>
+<li>Sel et poivre au goût</li>
+</ul>
+<h3 id="la-préparation">La préparation <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
+<ol>
+<li>Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble. Il est important qu’il y ait le moins de liquide possible dans ce mélange.</li>
+<li>Battre les œufs avec la farine et ajouter les pommes de terre. Saler et poivrer au goût. Maintenant, remuer jusqu’à ce que vous obteniez une consistance lisse.</li>
+<li>Avec une fourchette, façonner la réparation en plusieurs galettes.</li>
+<li>Faire chauffer l&rsquo;huile dans une poêle et y faire cuire.</li>
+</ol>
+<h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
+<p>Kartoffelpuffer sont servies des manières différentes dans différentes régions d’Allemagne, mais aussi dans différentes parties du monde. Personnellement, je les mange avec de la compote de pommes ce qui est délicieux. J’ai de très bons souvenirs d’enfance de manger des Kartoffelpuffer avec de la compote de pommes sur la plage dans le nord de l’Allemagne. Sinon, une autre option sucrée est de manger les Kartoffelpuffer avec de la confiture. Ici, la confiture de groseilles ou de prunes est particulièrement appropriée. En revanche, une amie de Pologne les mange toujours de manière salée. Elle préfère le fromage blanc, mais d’autres variantes populaires en Pologne sont la crème fraîche, le fromage cottage ou le gruyère. Choisissez ce que vous voulez  !</p>
 
       </div>
        
