--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -9,11 +9,13 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelpuffer"/>
-<meta name="twitter:description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+<meta name="twitter:description" content="Kartoffelpuffer ou les galettes de pomme de terre # Temps 35 minutes
+Portions 4 portions
 Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble."/>
 
 <meta property="og:title" content="Kartoffelpuffer" />
-<meta property="og:description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+<meta property="og:description" content="Kartoffelpuffer ou les galettes de pomme de terre # Temps 35 minutes
+Portions 4 portions
 Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelpuffer/" /><meta property="article:section" content="posts" />
@@ -21,7 +23,8 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 
 
 <meta itemprop="name" content="Kartoffelpuffer">
-<meta itemprop="description" content="*Kartoffelpuffer&quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions
+<meta itemprop="description" content="Kartoffelpuffer ou les galettes de pomme de terre # Temps 35 minutes
+Portions 4 portions
 Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble.">
 
 <meta itemprop="wordCount" content="258">
@@ -46,7 +49,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
     "name": "Kartoffelpuffer",
     "headline": "Kartoffelpuffer",
     "alternativeHeadline": "",
-    "description": "*Kartoffelpuffer\u0026quot; ou les galettes de pomme de terre # Temps 35 minutes Portions 4 portions\nLes ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l\u0026rsquo;aide d\u0026rsquo;une passoire, puis mélanger ensemble.",
+    "description": "Kartoffelpuffer ou les galettes de pomme de terre # Temps 35 minutes\nPortions 4 portions\nLes ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons râpés 2 œufs 2 c. à soupe de farine Plusieurs c. à soupe d’huile Sel et poivre au goût La préparation # Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l\u0026rsquo;aide d\u0026rsquo;une passoire, puis mélanger ensemble.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -138,9 +141,11 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre">*Kartoffelpuffer&quot; ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
-<p><strong>Temps</strong>       35 minutes
-<strong>Portions</strong>    4 portions</p>
+      <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
+<p><img src="../media/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
+</p>
+<p><strong>Temps</strong>       35 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>12 pommes de terre pelées et râpées, non cuites</li>
