--- a/print/index.html
+++ b/print/index.html
@@ -178,9 +178,11 @@
     <h2 class="titre-chapitre" id="Kartoffelpuffer"></h2>
     <h3>Kartoffelpuffer</h3>
     <div class="contenu">
-        <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre">*Kartoffelpuffer&quot; ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
-<p><strong>Temps</strong>       35 minutes
-<strong>Portions</strong>    4 portions</p>
+        <h2 id="kartoffelpuffer-ou-les-galettes-de-pomme-de-terre"><em>Kartoffelpuffer</em> ou les galettes de pomme de terre <a href="#kartoffelpuffer-ou-les-galettes-de-pomme-de-terre" class="hash">#</a></h2>
+<p><img src="../media/Kartoffelpuffer.jpg" alt="Les galettes de pomme de terre" loading="lazy" />
+</p>
+<p><strong>Temps</strong>       35 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>12 pommes de terre pelées et râpées, non cuites</li>
