deploy: 644a98e7fbe6236a17a316dbe6a3a60b73c6219a

--- a/print/index.html
+++ b/print/index.html
@@ -209,7 +209,30 @@
     <h2 class="titre-chapitre" id="Kartoffelpüree"></h2>
     <h3>Kartoffelpüree</h3>
     <div class="contenu">
-        
+        <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><em>Kartoffelpüree</em> ou la purée de pommes de terre <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
+<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
+</p>
+<p><strong>Temps</strong>       30 minutes
+<strong>Portions</strong>    4 portions</p>
+<h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
+<ul>
+<li>1 kg de pommes de terre épluchées</li>
+<li>200 ml de lait chaud</li>
+<li>4 c. à soupe de beurre</li>
+<li>Sel et poivre au goût</li>
+</ul>
+<h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
+<ol>
+<li>Les pommes de terre sont bouillies dans une casserole avec de l’eau salée.</li>
+<li>Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.</li>
+<li>Maintenant, écraser vos pommes de terre en purée avec, par exemple, une fourchette.</li>
+<li>Chauffer le beurre et le lait un peu au micro-ondes. Ajouter ces deux choses aux pommes de terre à feu doux. Mélanger jusqu’à formation d’une masse homogène.</li>
+<li>Ajoutez encore du beurre ou du lait si vous voulez que le mélange soit plus liquide. Salez et poivrez au goût.</li>
+</ol>
+<h3 id="mon-conseil">Mon conseil <a href="#mon-conseil" class="hash">#</a></h3>
+<p>Personnellement, j’adore mon Kartoffelpüree liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le Kartoffelpüree et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
+De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
+
     </div>
     </section>
     
