deploy: 1b02acbbba7089a115aaa2883be8e517d8f02146

--- a/kartoffelpuffer/index.html
+++ b/kartoffelpuffer/index.html
@@ -155,7 +155,7 @@ Les ingrédients # 12 pommes de terre pelées et râpées, non cuites 2 oignons 
 <li>Plusieurs c. à soupe d’huile</li>
 <li>Sel et poivre au goût</li>
 </ul>
-<h3 id="la-préparation">La préparation <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
+<h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
 <ol>
 <li>Bien égoutter les pommes de terre et les oignons sur un torchon de cuisine, du papier absorbant ou à l&rsquo;aide d&rsquo;une passoire, puis mélanger ensemble. Il est important qu’il y ait le moins de liquide possible dans ce mélange.</li>
 <li>Battre les œufs avec la farine et ajouter les pommes de terre. Saler et poivrer au goût. Maintenant, remuer jusqu’à ce que vous obteniez une consistance lisse.</li>
