--- a/kartoffelpüree/index.html
+++ b/kartoffelpüree/index.html
@@ -9,11 +9,13 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Kartoffelpüree"/>
-<meta name="twitter:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes Portions 4 portions
+<meta name="twitter:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
+Portions 4 portions
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau."/>
 
 <meta property="og:title" content="Kartoffelpüree" />
-<meta property="og:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes Portions 4 portions
+<meta property="og:description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
+Portions 4 portions
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/kartoffelp%C3%BCree/" /><meta property="article:section" content="posts" />
@@ -21,7 +23,8 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
 
 
 <meta itemprop="name" content="Kartoffelpüree">
-<meta itemprop="description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes Portions 4 portions
+<meta itemprop="description" content="Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes
+Portions 4 portions
 Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.">
 
 <meta itemprop="wordCount" content="211">
@@ -46,7 +49,7 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
     "name": "Kartoffelpüree",
     "headline": "Kartoffelpüree",
     "alternativeHeadline": "",
-    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes Portions 4 portions\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
+    "description": "Kartoffelpüree ou la purée de pommes de terre # Temps 30 minutes\nPortions 4 portions\nLes ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c. à soupe de beurre Sel et poivre au goût La préparation # Les pommes de terre sont bouillies dans une casserole avec de l’eau salée. Elles sont cuites jusqu’à ce qu’elles deviennent molles. Environ 20 minutes. Après cela, vidangez l’eau.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -139,10 +142,10 @@ Les ingrédients # 1 kg de pommes de terre épluchées 200 ml de lait chaud 4 c.
       <div class="post-content e-content" itemprop="articleBody">
         
       <h2 id="kartoffelpüree-ou-la-purée-de-pommes-de-terre"><em>Kartoffelpüree</em> ou la purée de pommes de terre <a href="#kartoffelp%c3%bcree-ou-la-pur%c3%a9e-de-pommes-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
+<p><img src="../media/Kartoffelp%c3%bcree.jpg" alt="La purée de pommes de terre" loading="lazy" />
 </p>
-<p><strong>Temps</strong>       30 minutes
-<strong>Portions</strong>    4 portions</p>
+<p><strong>Temps</strong>       30 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
 <h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
 <ul>
 <li>1 kg de pommes de terre épluchées</li>
