deploy: f6565f5faec3b7967babbf685b8d9c47848aad35

--- a/print/index.html
+++ b/print/index.html
@@ -233,7 +233,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
     <h3>Kartoffelsalat</h3>
     <div class="contenu">
         <h2 id="kartoffelsalat-ou-la-salade-de-pomme-de-terre"><em>Kartoffelsalat</em> ou la salade de pomme de terre <a href="#kartoffelsalat-ou-la-salade-de-pomme-de-terre" class="hash">#</a></h2>
-<p><img src="../media/Bratkartoffeln.jpg" alt="Les pommes de terre sautées au lardon" loading="lazy" />
+<p><img src="../media/Kartoffelsalat.jpg" alt="La salade de pomme de terre" loading="lazy" />
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
