deploy: c03fb74c2a9eab17ae976e330c6797c0fcdc31fa

--- a/print/index.html
+++ b/print/index.html
@@ -162,7 +162,30 @@
     <h2 class="titre-chapitre" id="Kartoffelauflauf"></h2>
     <h3>Kartoffelauflauf</h3>
     <div class="contenu">
-        
+        <h2 id="kartoffelauflauf-ou-gratin-de-pommes-de-terre"><em>Kartoffelauflauf</em> ou gratin de pommes de terre <a href="#kartoffelauflauf-ou-gratin-de-pommes-de-terre" class="hash">#</a></h2>
+<p><img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+</p>
+<p><strong>Temps</strong>       75 minutes</p>
+<p><strong>Portions</strong>    4 portions</p>
+<h3 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h3>
+<ul>
+<li>1 kg de pomme de terre</li>
+<li>100 g de gruyère râpé</li>
+<li>85 g de beurre</li>
+<li>250 ml de bouillon</li>
+<li>Sel et poivre au goût</li>
+</ul>
+<h3 id="la-préparation"><strong>La préparation</strong> <a href="#la-pr%c3%a9paration" class="hash">#</a></h3>
+<ol>
+<li>Peler les pommes de terre et les couper en tranches extrêmement fines.</li>
+<li>Graisser un plat allant au four avec du beurre. Répartir toutes les tranches fines de pommes de terre dans le plat allant au four. Ajouter le gruyère râpé.</li>
+<li>Étaler des cubes de beurre sur le gruyère râpé.</li>
+<li>Maintenant, versez le bouillon sur le plat allant au four.</li>
+<li>Cuire le Kartoffelauflauf au moins 40 minutes à 200 degrés Celsius. Le bouillon doit être complètement absorbé par les pommes de terre à la fin.</li>
+</ol>
+<h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
+<p>En fait, le Kartoffelauflauf est une recette que je n’ai connue que récemment, mais qui a immédiatement conquis mon estomac et mon cœur. Lorsque j’ai préparé ce plat pour la première fois pour ma famille, chaque membre de la famille a tout de suite adoré cette recette. En effet, c’est le plat préféré de ma sœur depuis. À mon avis, ce plat se marie bien avec le poisson cuit au four.</p>
+
     </div>
     </section>
     
