deploy: 327886af496754b30c9d40b79e938f9501458db4

--- a/print/index.html
+++ b/print/index.html
@@ -260,7 +260,7 @@ De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour e
 </p>
 <p><strong>Temps</strong>       70 minutes</p>
 <p><strong>Portions</strong>    4 portions</p>
-<h2 id="les-ingrédients"><em>Les ingrédients</em> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h2>
+<h2 id="les-ingrédients"><strong>Les ingrédients</strong> <a href="#les-ingr%c3%a9dients" class="hash">#</a></h2>
 <ul>
 <li>1.5 kg de pomme de terre</li>
 <li>2 oignons moyens</li>
