deploy: b5b6206be25c53d32aa1dffa033b85a48504a467

--- a/print/index.html
+++ b/print/index.html
@@ -244,7 +244,7 @@
 <li>Chauffer le beurre et le lait un peu au micro-ondes. Ajouter ces deux choses aux pommes de terre à feu doux. Mélanger jusqu’à formation d’une masse homogène.</li>
 <li>Ajoutez encore du beurre ou du lait si vous voulez que le mélange soit plus liquide. Salez et poivrez au goût.</li>
 </ol>
-<h3 id="mon-conseil">Mon conseil <a href="#mon-conseil" class="hash">#</a></h3>
+<h3 id="mon-conseil"><strong>Mon conseil</strong> <a href="#mon-conseil" class="hash">#</a></h3>
 <p>Personnellement, j’adore mon Kartoffelpüree liquide et sans morceaux. Cependant, les opinions en Allemagne différent considérablement ici. D’autres aiment les morceaux dans le Kartoffelpüree et ne l’aiment pas du tout quand elle est trop liquide. À vous d’essayer comment vous l’aimez le mieux  !
 De surcroît, Kartoffelpüree avec des bâtonnets de poisson est un repas pour enfants très populaire en Allemagne. Moi, j’aime toujours cette combinaison à ce jour et je ne peux que la recommander.</p>
 
