--- a/histoire/index.html
+++ b/histoire/index.html
@@ -21,7 +21,7 @@
 <meta itemprop="name" content="Histoire de la pomme de terre">
 <meta itemprop="description" content="L’histoire de la Kartoffel en un coup d’œil # La Kartoffel ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de « papa » et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de « patata ».">
 
-<meta itemprop="wordCount" content="247">
+<meta itemprop="wordCount" content="244">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../histoire/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -80,7 +80,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/histoire\/",
-    "wordCount" : "247",
+    "wordCount" : "244",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -137,11 +137,11 @@
         
       <h2 id="lhistoire-de-la-kartoffel-en-un-coup-dœil">L’histoire de la <em>Kartoffel</em> en un coup d’œil <a href="#lhistoire-de-la-kartoffel-en-un-coup-d%c5%93il" class="hash">#</a></h2>
 <p>La <em>Kartoffel</em> ou la pomme de terre provient à l’origine de la Cordillère des Andes. Là, elle poussait à l’état sauvage. Elle a été baptisée par les Incas avec le nom de  «  papa  »  et activement cultivé par eux à partir du 13ème siècle. Au 16ème siècle, elle a été introduite en Europe par les colonisateurs espagnols. En Espagne, elle a reçu le nom de  «  patata  ». De l’Espagne, elle s’est lentement répandue en Italie, puis en France et en Allemagne. C’est en Allemagne en 1581 que la première recette connue avec des pommes de terre a été créée.</p>
-<p><strong>Un fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
+<p><strong>Fait amusant  :</strong>  En France, la pomme de terre était initialement considérée comme toxique pour l’homme et n’était donc donnée qu’aux animaux.</p>
 <p><img src="../media/Parmentier.jpg" alt="Antoine-Augustin Parmentier" loading="lazy" />
 </p>
 <p>Ce n’est qu’au 18ème siècle que le pharmacien Antoine-Augustin Parmentier dissout cette erreur. Il commence à cultiver la pomme de terre en France et souligne l’importance d’utiliser la pomme de terre pour lutter contre les famines.</p>
-<p><strong>Un autre fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
+<p><strong>Fait amusant  :</strong>  Parmentier prépare un dîner pour le roi et la reine, au cours duquel seulement des plats avec des pommes de terre sont servis. À mon avis, ce dîner ressemble à un dîner que j’apprécierais beaucoup.
 Désormais, la pomme de terre devient de plus en plus importante et ne cesse de se répandre dans toute l’Europe et dans d’autres régions jusqu’à ce qu’elle conquière finalement le monde entier à la fin du 20ème siècle.</p>
 
       </div>
