deploy: 080c4efb39f4cd3fed1c02edd76235af6cabf69a

--- a/variété/index.html
+++ b/variété/index.html
@@ -9,19 +9,22 @@
   <meta name="description" content="Description">
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Variété de la pomme de terre"/>
-<meta name="twitter:description" content="Quelques variétés de la Kartoffel : Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen."/>
+<meta name="twitter:description" content="Quelques variétés de la Kartoffel :
+Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen."/>
 
 <meta property="og:title" content="Variété de la pomme de terre" />
-<meta property="og:description" content="Quelques variétés de la Kartoffel : Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen." />
+<meta property="og:description" content="Quelques variétés de la Kartoffel :
+Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/vari%C3%A9t%C3%A9/" /><meta property="article:section" content="posts" />
 
 
 
 <meta itemprop="name" content="Variété de la pomme de terre">
-<meta itemprop="description" content="Quelques variétés de la Kartoffel : Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
+<meta itemprop="description" content="Quelques variétés de la Kartoffel :
+Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.">
 
-<meta itemprop="wordCount" content="81">
+<meta itemprop="wordCount" content="171">
 <meta itemprop="keywords" content="" />
   <link rel="canonical" href="../vari%C3%A9t%C3%A9/">
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
@@ -43,7 +46,7 @@
     "name": "Variété de la pomme de terre",
     "headline": "Variété de la pomme de terre",
     "alternativeHeadline": "",
-    "description": "Quelques variétés de la Kartoffel : Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.",
+    "description": "Quelques variétés de la Kartoffel :\nLes variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.",
     "inLanguage": "fr-fr",
     "isFamilyFriendly": "true",
     "mainEntityOfPage": {
@@ -80,7 +83,7 @@
     },
     "image": "/images/logo.jpg",
     "url" : "\/vari%C3%A9t%C3%A9\/",
-    "wordCount" : "81",
+    "wordCount" : "171",
     "genre" : [ ],
     "keywords" : [ ]
 }
@@ -135,8 +138,21 @@
 
       <div class="post-content e-content" itemprop="articleBody">
         
-      <p>Quelques variétés de la Kartoffel :
-Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
+      <p>Quelques variétés de la Kartoffel :</p>
+<p><img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+</p>
+<p>Les variétés de pommes de terre les plus connues sont probablement celles de couleur jaune. Toutefois, ce sont les variétés rouges qui arrivent en premier en Europe par l’Espagne. Les variétés jaunes arrivent plus tard en Angleterre. Alors qu’en 1777 40 variétés ont été enregistrées, en 1881 il y en a déjà 630. Aujourd’hui, selon certaines estimations, il existe plusieurs milliers de variétés. En 2010, 1284 variétés sont officiellement enregistrées dans le catalogue communautaire européen.</p>
+<p>La pomme de terre Jeannette
+<img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+
+Cette variété de pomme de terre a une peau rose, est polyvalente et convient à toutes les recettes de pommes de terre.</p>
+<p>La pomme de terre blanche
+<img src="../media/Kartoffelauflauf.jpg" alt="Le gratin de pommes de terre" loading="lazy" />
+
+Cette variété de pomme de terre a une peau jaune et est particulièrement populaire auprès des jardiniers amateurs, car elle est très facile à cultiver.</p>
+<p>La pomme de terre Bleu d’Artois!
+<a href="../media/Kartoffelauflauf.jpg">Le gratin de pommes de terre</a>
+Cette variété a une peau bleue intense, est également facile à cultiver et est particulièrement délicieuse lorsqu’elle est transformée en chips.</p>
 
       </div>
        
